# clip_gen

./: .coverage  CHANGELOG.md  Makefile  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/epics/gemini-kling-mcp-service/: 001.md  002.md  004.md  4.md  6.md  7.md  8.md  9.md  epic.md.backup  execution-status.md  github-mapping.md
.claude/epics/gemini-kling-mcp-service/updates/2/: progress.md
.claude/epics/gemini-kling-mcp-service/updates/3/: progress.md
.claude/prds/: gemini-kling-mcp-service.md
docs/: README.md
examples/: README.md
examples/basic/: text_generation.py
scripts/: dev_server.sh  run_tests.sh
src/gemini_kling_mcp/: __init__.py  config.py  exceptions.py  logger.py  mcp_server.py
src/gemini_kling_mcp/file_manager/: __init__.py  cache.py  core.py  output_modes.py  security.py
src/gemini_kling_mcp/services/: __init__.py
src/gemini_kling_mcp/services/gemini/: __init__.py  client.py  image_service.py  image_utils.py  models.py  text_service.py  validators.py
src/gemini_kling_mcp/services/kling/: __init__.py  client.py  models.py  progress_tracker.py  video_service.py  video_utils.py
src/gemini_kling_mcp/tools/: __init__.py  chat_completion.py  image_tools.py  kling_video.py  registry.py  text_analysis.py  text_generation.py
src/gemini_kling_mcp/tools/workflow/: __init__.py  multimedia_creator.py  story_video_generator.py  workflow_manager.py
src/gemini_kling_mcp/utils/: __init__.py  health.py
src/gemini_kling_mcp/workflow/: __init__.py  dag.py  engine.py  state_manager.py  steps.py  templates.py
tests/: __init__.py  conftest.py  test_data_generator.py  test_image_service.py  test_image_tools_new.py  test_image_tools_simple.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/integration/: test_gemini_service_integration.py  test_story_video_workflow.py
tests/mocks/: __init__.py  mock_gemini_service.py  mock_kling_service.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_config.py  test_exceptions.py  test_file_manager.py  test_gemini_service.py  test_health.py  test_kling_service.py  test_logger.py  test_mcp_server.py  test_tools_registry.py  test_workflow_engine.py
tests/unit/file_manager/: __init__.py  test_cache.py  test_core.py  test_output_modes.py  test_security.py
tests/unit/services/: __init__.py
tests/unit/services/gemini/: __init__.py  test_client.py  test_models.py  test_text_service.py  test_validators.py
tests/unit/services/kling/: __init__.py  test_client.py  test_models.py  test_video_utils.py
tests/unit/tools/: test_kling_video.py  test_text_generation.py
tests/utils/: __init__.py  test_helpers.py
